# operatingsystemsbsc

./: .gitignore  README.md  ubuntu-post-install.sh
bash/code/lab01/: README.md
bash/code/lab02/: README.md  es21.sh  es22.sh
bash/code/lab03/: README.md  es31_find.sh  es39.sh
bash/code/lab04/: README.md  es41.sh  es46.sh  es47.sh
bash/slides/ppt/: 02 - Bash Shell.pptx  03 - Bash Scripting.pptx  03 - Bash Scripts.pptx
c/code/: CMakeLists.txt  makefile
c/code/basic programming/: CMakeLists.txt  lab01.md
c/code/basic programming/lab01/: CMakeLists.txt  es04.c  es07.c  es10.c  es13.c  es17.c  es18.c  es20.c  es22.c  es25.c  es25_lib.c  es25_lib.h
c/code/basic programming/labs02/: es22.c
c/code/examples/: allocate_matrix_double.c  allocate_matrix_single.c  example.c  printf_types.c  static_array.c  static_matrix.c  test.c
c/code/lab01/: 0101.c  0103.c  0104.c  0105.c  0106.c  0107.c  0108.c  0109.c  0110.c  0111.c  0112.c  0113.c  0114.c  0115.c  0117.c  0118.c  0119.c  0120.c  README.md
c/code/lab02/: 0201.c  0202.c  0203.c  0204.c  0205.c  0206.c  0207.c  0208.c  0209.c  0210.c  0211.c  0212.c  0213.c  0214.c  0215.c  0217.c  README.md
c/code/lab03/: 0301.c  0302.c  0303.c  0304.c  0305.c  0306.c  0307.c  0308.c  0309.c  0310.c  README.md
c/code/lab04/: 0401.c  0402.c  0403.c  0404.c  0405.c  0406.c  0407.c  0408.c  0409.c  0410.c  0411.c  0412.c  0414.c  0415.c  README.md
c/code/lab05/: README.md
c/code/lab06/: README.md
c/code/labs01/: README.md
c/code/labs02/: README.md
c/code/labs03/: README.md
c/code/labs04/: README.md
c/code/system programming/lab02/: es26.c
c/slides/: 05 - Il linguaggio C - Concetti base.md
c/slides/markdown/: 01-Introduzione.md  02-Makefile.md  03-Variabili.md  04-Operatori.md  05-Controllo_di_flusso.md  06-Funzioni.md  M1-Introduzione.md  M2-Preprocessore.md  M3-Strutture_controllo.md  M4-Tipi_dati.md  M5-Funzioni.md  M6-Tipi_dati_derivati.md  M7-File.md  M8-Puntatori.md  makefile
c/slides/markdown/images/: others.pptx
code/bash/lab01/: README.md
code/bash/lab02/: README.md  es210.sh  es27.sh  es28.sh  es29.sh
code/bash/lab03/: README.md  es31_find.sh  es32.sh  es33.sh  es34.sh  es35.sh
code/bash/lab04/: README.md  es41.sh  es42.sh  es43.sh  es44.sh  es44p.sh  es45.sh
exams/: README.md
post-install/: ubuntu-post-install.sh
slides/ppt/: 00_Introduction.pptx  02_Bash Basics.pptx  02_Shell Bash.pptx  03_Bash Scripting.pptx  04_Comandi principali.pptx
