cmake_minimum_required(VERSION 3.17)
project(lab01 C)

set(CMAKE_C_STANDARD 99)

add_executable(es04 es04.c)
add_executable(es07 es07.c)
add_executable(es08 es08.c)
add_executable(es13 es13.c)
add_executable(es20 es20.c)
add_executable(es21 es21.c)
add_executable(es22 es22.c)
add_executable(es25 es25.c es25_lib.c es25_lib.h)